[package]
name = "fhe-workshop"
version = "0.1.0"
edition = "2021"
description = ": A practical introduction to FHE for software developers"
repository = "https://github.com/gnosisguild/fhe-workshop"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fhe = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
fhe-traits = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
fhe-util = { git = "https://github.com/gnosisguild/fhe.rs", version = "0.1.0-beta.7" }
rand = "0.8.5"
rayon = "1.10.0"
